[package]
name = "pathological"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[profile.release]
lto = true
strip = true
